# GAME_archived

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  bash_replace.sh  build_install.sh  clean.sh  coding_standard  compile  compile.sh  count_lines  count_lines.sh  create_directories.sh  create_directories_for_large_files.sh  ess0.0.0  run  run.sh  run_op_0  setup_build_directories.sh
core/: CMakeLists.txt  compile.sh  create_movie.sh  game  movie.mp4.REMOVED.git-id  run.sh
core/output/test_1/: init+0s.grb2  init+1000s.grb2  init+100s.grb2  init+1100s.grb2  init+1152s.grb2  init+1200s.grb2  init+1300s.grb2  init+1400s.grb2  init+1440s.grb2  init+1500s.grb2  init+1600s.grb2  init+1700s.grb2  init+1728s.grb2  init+1800s.grb2  init+1900s.grb2  init+2000s.grb2  init+200s.grb2  init+2100s.grb2  init+2200s.grb2  init+2300s.grb2  init+2400s.grb2  init+2500s.grb2  init+2600s.grb2  init+2700s.grb2  init+2800s.grb2  init+288s.grb2  init+2900s.grb2  init+3000s.grb2  init+300s.grb2  init+3100s.grb2  init+3200s.grb2  init+3300s.grb2  init+3400s.grb2  init+3500s.grb2  init+3600s.grb2  init+3700s.grb2  init+3800s.grb2  init+3900s.grb2  init+4000s.grb2  init+400s.grb2  (+39 more)
core/output/test_3/: init+0s.grb2  init+10000s.grb2  init+1000s.grb2  init+10080s.grb2  init+100s.grb2  init+10100s.grb2  init+10200s.grb2  init+10300s.grb2  init+10368s.grb2  init+10400s.grb2  init+10500s.grb2  init+10600s.grb2  init+10656s.grb2  init+10700s.grb2  init+10800s.grb2  init+10900s.grb2  init+10944s.grb2  init+11000s.grb2  init+1100s.grb2  init+11100s.grb2  init+11200s.grb2  init+11232s.grb2  init+11300s.grb2  init+11400s.grb2  init+11500s.grb2  init+11520s.grb2  init+1152s.grb2  init+11600s.grb2  init+11700s.grb2  init+11800s.grb2  init+11808s.grb2  init+11900s.grb2  init+12000s.grb2  init+1200s.grb2  init+12096s.grb2  init+12100s.grb2  init+12200s.grb2  init+12300s.grb2  init+12384s.grb2  init+12400s.grb2  (+659 more)
core/output/test_4/: init+0s.grb2
core/run_configs/: test_0  test_0.sh  test_1.sh  test_1_w_plt.sh  test_2.sh  test_3.sh  test_3_w_plt.sh  test_4_w_plt.sh
core/src/: coordinator.c  coordinator.h  enum_and_typedefs.h  info  settings.c  settings.h
core/src/diagnostics/: averaging.c  calc_numerical_diffusion_coeffs.c  density_diagnostics.c  diagnostics.h  diffusion_coefficients.c  diffusion_diagnostics.c  exner_pressure_diagnostics.c  gas_constant_diagnostics.c  global_scalar_integral.c  info  pot_temp_diagnostics.c  pressure_diagnostics.c  recov_hor_par_pri.c  recov_hor_ver_pri.c  recov_primal2dual.c  remap_horpri2hordual_vector.c  remap_verpri2horpri_vector.c  ricci.c  spec_heat_cap_diagnostics.c  tangential_wind.c  temperature_diagnostics.c  thermodynamic_diagnostics.c  thermodynamical_diagnostics.c  trsk_modified.c  vertical_coriolis_gen.c  vorticity_flux_horizontal.c  vorticity_flux_horizontal_traditional.c  vorticity_flux_vertical.c
core/src/diagnostics/dynamic_diagnostics/: info  (+7 more)
core/src/integrators/: info  integrators.h
core/src/io/: bc_setter.c  info  init_state_setter.c  interpolation_t.c  io.h  set_grid_props_and_dt.c  spatial_ops_for_output.c  write_output.c
core/src/manage_time_stepping/: info  manage_interpolation.c  manage_time_stepping.c  manage_time_stepping.h
core/src/ocean_coupler/: ocean_coupler.c
core/src/physics/: held_suar.c  mo_radiation.f90  physics.h
core/src/r_operators/: add_vector_fields.c  adv_s.c  adv_scalar.c  cross_product.c  curl.c  curl_dual.c  determine_tendency.c  div.c  dump  grad.c  inner.c  laplace.c  laplace_vec.c  linear_combine_two_states.c  r_operators.h  rot.c  rot_dual.c  scalar_product.c  scalar_product_elementary.c  scalar_times_scalar.c  scalar_times_vector.c  scalar_times_vector_h_v.c  vector_product.c
core/src/radiation/: radiation.h  rterrtmgp_coupler.f90
core/src/soil/: soil.c  soil.h
core/src/soil_coupler/: soil_coupler.c
core/src/spatial_operators/: averaging.c  calc_tendencies.c  coriolis_gen.c  cross_product.c  curl.c  deformations.c  determine_tendencies.c  determine_tendency.c  dissipation.c  div.c  divergence_h.c  divergence_operators.c  divergences.c  grad.c  gradient_operators.c  horizontal_tendencies.c  info  inner_product.c  kinetic_energy.c  linear_combine_two_states.c  momentum_diff_diss.c  multiplications.c  pot_vort.c  potential_vorticity.c  scalar_times_scalar.c  scalar_times_vector.c  scalar_times_vector_h_v.c  shear.c  spatial_operators.h  vector_times_vector.c  vorticities.c  vorticity_flux.c
core/src/subgrid_scale/: convection.c  effective_diff_coeffs.c  subgrid_scale.h
core/src/thermodynamics/: thermodynamics.c  thermodynamics.h
core/src/time_stepping/: adams_bashforth.c  backward_tendencies.c  euler_explicit.c  forward_tendencies.c  heun.c  leapfrog.c  lower_boundary_solver.c  manage_interpolated_state.c  manage_interpolation.c  manage_pressure_gradient.c  manage_rkhevi.c  manage_time_stepping.c  runge_kutta_fourth_order.c  runge_kutta_third_order.c  scalar_tendencies_expl.c  time_stepping.h  vector_tendencies_expl.c  vertical_slice_solver.c  vertical_slice_solvers.c
core/src/waves/: waves.c  waves.h
core/src/waves_coupler/: waves_coupler.c
grid_generator/: CMakeLists.txt  clean.sh  compile.sh  discrete_coordinate_trafos.c  discrete_coordinate_trafos.h  enum.h  enum_and_typedefs.h  grid_generator  grid_generator.c  run.s  run.sh  run_script.sh
grid_generator/.py/: is_land.py
grid_generator/.sh/: run.sh
grid_generator/phys_quantities/: download_etopo.sh
grid_generator/src/: coordinator.c  coriolis.c  discrete_coordinate_trafos.c  enum.h  geodesy.c  gravity_potential.c  grid_generator.c  grid_generator.h  horizontal_generation.c  include.h  index.c  index_helpers.c  inner_product.c  interpolate_ll.c  kinetic_energy.c  miscellaneous.c  optimize.c  phys_sfc_properties.c  recovery.c  remap.c  rhombus_averaging.c  standard.h  vertical_grid.c
grid_generator/statistics/: B5L26T30000_O0_OL17_SCVT.txt  B5L26T30000_O0_OL23_SCVT.txt  B5L26T30000_O2_OL17.txt  B5L26T30000_O3_OL23_SCVT.txt  B5L26T41152_O0_OL23_SCVT.txt  B6L26T30000_O0_OL17.txt  B6L26T30000_O0_OL17_SCVT.txt  B6L26T30000_O3_OL17.txt
(+383 files in other folders)
